# linkedin

./: connection.rs  need.txt
web_crawler/: .dockerignore  Cargo.toml  Dockerfile  DockerfileWM  ai_search1727699905431x760302535506919400 page11.txt  ai_search1727781458096x347558862036926460 page1.txt  ai_search1727784855642x243874301358899200 page1.txt  ai_search1727784855642x243874301358899200 page2.txt  ai_search1727787579537x265484787955269630 page2.txt  ai_search1727866804917x102786802404294660 page2.txt  entrypoint.sh  need.txt  page1.txt  rust-toolchain.toml  xvfb.sh
web_crawler/src/: lib.rs  main.rs  main1.rs  main_old.rs
web_crawler/src/actions/: browser.rs  change_stage_project.rs  connection.rs  evaluate.rs  init_browser.rs  keyword_filter.rs  mod.rs  save_each_to_project.rs  save_to_project.rs  scrap_connections.rs  scrap_conversations.rs  scrap_inmails.rs  scrap_messages.rs  scrap_profile.rs  scrap_projects.rs  scrap_recruiter_search.rs  scrap_regular_search.rs  send_inmails.rs  send_message.rs  serialize.rs  start_browser.rs  start_browser_new.rs  start_browser_test.rs  test.rs  wait.rs  withdraw_connection.rs  withdraw_pending_connection.rs
web_crawler/src/actions/add_to_project/: change_stage_project.rs  mod.rs  save_each_to_project.rs  save_to_project.rs
web_crawler/src/actions/scrap_profile/: misc.rs  mod.rs  scrap_each_profile.rs  scrap_each_profile_new.rs  scrap_education.rs  scrap_experience_new_tab.rs  scrap_profiles.rs  scrap_profiles_new.rs
web_crawler/src/actions/scrap_profile_f/: misc.rs  mod.rs  scrap_education.rs  scrap_experience_new_tab.rs  scrap_experience_same_tab.rs  scrap_profile.rs
web_crawler/src/structs/: browser.rs  candidate.rs  connection.rs  conversation.rs  entry.rs  error.rs  fullname.rs  inmail_conversation.rs  message.rs  mod.rs  queue.rs  user.rs
