[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
tokio = "1.25.0"
playwright = "0.0.20"
actix-web = "4.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
reqwest = { version = "0.11.14", features = ["json","blocking"] }
random-number = "0.1.8"
scraper = "0.16.0"
regex = "1.5.4"
url = "2.2.2"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
anyhow = "1.0.44"
base64 = "0.21.3"
fantoccini = "0.19.3"
headless_chrome = "1.0.5"
thirtyfour = "0.31.0"
undetected-chromedriver = "0.1.0"
