[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
image = "0.23.14"
futures = "0.3.30"
tokio = "1.25.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
random-number = "0.1.8"
scraper = "0.16.0"
regex = "1.5.4"
url = "2.2.2"
tracing = "0.1.34"
tracing-subscriber = "0.3.17"
anyhow = "1.0.44"
tracing-futures = "0.2"
hyper = "0.14.27"
axum = "0.6.20"
chrono = "0.4.31"
base64 = "0.21.5"
async-trait = "0.1.74"
cookie = "0.18.1"
rand = "0.8.5"
thirtyfour = "0.31.0"
zip = "0.6.6"
unicode-normalization = "0.1.23"
percent-encoding = "2.3.1"
